<resources>
    <string name="app_name">TaskWise</string>
    //MainActivity
    <string name="hi">Hello</string>
    <string name="empty">Let\'s organize and manage your plans together!</string>
    <string name="notEmpty">Hurry up, we have to get to work!</string>

    <string name="tasks">Tasks</string>
    <string name="events">Events</string>

    <string name="delete">Delete</string>

    //NavigationDrawer
    <string name="taskOptions">Task options</string>
    <string name="eventOptions">Event options</string>
    <string name="completedTasks">Completed tasks</string>
    <string name="outDatedTasks">Outdated Tasks</string>
    <string name="clearTaskList">Clear task list</string>
    <string name="clearEventList">Clear event list</string>
    <string name="setting">Setting</string>
    <string name="contact">Contact with developer </string>

    <string name="openNavigation">Open navigation</string>
    <string name="closeNavigation">Open navigation</string>

    //TaskDetailActivity
    <string name="title">Title *</string>
    <string name="titleHint">Enter task title</string>

    <string name="taskTitleError">Please enter task title!</string>
    <string name="taskDescriptionError">Please enter task description!</string>

    <string name="timePeriod">Time period</string>
    <string name="inDayAhead">In day ahead</string>
    <string name="inThreeDays">In three days</string>
    <string name="inThisWeek">In this week</string>
    <string name="inThisMonth">In this month</string>

    <string name="description">Description *</string>
    <string name="descriptionHint">Enter task description</string>

    <string name="importance">Priority</string>
    <string name="highImportance">High priority</string>
    <string name="normalPriority">Normal task</string>
    <string name="lowPriority">Low priority</string>

    <string name="createNewTask">Create new task</string>
    <string name="createTask">Create task</string>
    <string name="editTask">Edit task</string>
    <string name="saveChanges">Save Changes</string>


    //EmptyStates
    <string name="tasksEmptyState">You didn\'t set any tasks</string>
    <string name="unspecifiedTasksEmptyState">You don\'t have any unspecified tasks!</string>
    <string name="completedTaskEmptyState">Sorry but you don\'t have any completed tasks!</string>

    //WelcomeActivity
    <string name="welcomePageText">Hi, How are you today? :)\nWe are here to create an environment together so that we can perform your daily tasks and tasks with more planning and power than before.!</string>
    <string name="userInfoText">Before continuing\nwe are very eager to know your name and expertise so that we can work together better than before.!</string>
    <string name="editUserInfoText">Please Enter the new info!</string>
    <string name="getStarted">Get started</string>
    <string name="nameHint">Enter your name</string>
    <string name="familyHint">Enter your family name</string>
    <string name="expertiseHint">Enter your expertiese</string>
    <string name="save">Save</string>

    //Toasts
    <string name="deleted">Deleted successfuly!</string>
    <string name="edited">Edited successfuly!</string>
    <string name="cleared">List cleared!</string>

    //Error
    <string name="titleError">Enter the task title!</string>
    <string name="descriptionError">Enter a short description for your task!</string>
    <string name="nameError">Enter your name!</string>
    <string name="familyError">Enter your family name!</string>
    <string name="expertiseError">Enter your expertiese!</string>

    //SettingActivity
    <string name="language">Language</string>
    <string name="selectLanguage">Select your language :</string>
    <string name="english">English</string>
    <string name="persian">Persian</string>
    <string name="theme">Theme</string>
    <string name="appMode">App mode</string>
    <string name="lightMode">Light mode</string>
    <string name="themeSelector">Select your theme :</string>

    <string name="notifications">Notifications</string>
    <string name="taskNotification">Task notifications</string>
    <string name="taskNotificationDesc">This one is for reminding outdated tasks!</string>
    <string name="eventNotification">Event notifications</string>
    <string name="eventNotificationDesc">This one is for notifying your events!</string>

    //TaskCategory
    <string name="category">Category</string>
    <string name="personal">Personal</string>
    <string name="lesson">University/School</string>
    <string name="study">Study</string>
    <string name="work">Work</string>
    <string name="gym">Gym</string>

    //CalendarView
    <string name="calendar">Calendar</string>
    <string name="extendedFab">Schedule</string>
    <string name="eventFab">Event</string>
    <string name="taskFab">Task</string>

    //EventDetailView
    <string name="createNewEvent">Create new event</string>
    <string name="createEvent">Create event</string>
    <string name="editEvent">Edit event</string>
    <string name="eventTitleError">Please enter event title!</string>

    <string name="Date">Date *</string>
    <string name="DateHint">Select Date for your event</string>

    <string name="startTime">Start Time :</string>
    <string name="endTime">End Time :</string>
    <string name="notifyMe">Notify me :</string>
    <string name="hourBefore">a Hour Before</string>
    <string name="halfHour">half-hour before</string>
    <string name="quarterHour">quarter-hour before</string>
    <string name="atTheTime">at the time</string>
    <string name="eventDescription">Description</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    //Notification
    <string name="eventChannel">This channel is a reminder for your event, this will notify you when the event time comes</string>
    <string name="taskChannel">This channel is a reminder for your outdated tasks, this will notify you when when your tasks deadline is over</string>

    <string name="eventNotificationDescription">You set an event for current time, goodluck with that! :)</string>
    <string name="taskNotificationDescription">Your maximum saved time for this task has expired and you have not taken any action yet!\n Refer to Expired Tasks section!</string>

    <string name="allowAccess">Allow access</string>
    <string name="notificationDialog">Dear user, we need your permission to remind you of your tasks and events through notifications, if you don\'t want to, there will be no change in performance, you just won\'t receive the notifications!</string>

    //Contact Developer
    <string name="greeting_message">Hello!\n I\'m Amirhossein Tashakkori, an Android developer, and the creator of TaskWise!\nI would be delighted to hear your suggestions, criticisms, or even engage in a friendly conversation about the software!\nThis not only contributes to the growth here but also enhances your user experience, fostering a more beneficial and professional collaboration between us!\nI\'m looking forward to your emails. :)</string>
    <string name="sendEmail">Send email</string>


</resources>