<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.taskwise.Welcome.UserInfoActivity"
    android:background="@drawable/bg_dark2light"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <RelativeLayout
                android:id="@+id/backBtn"
                android:layout_width="36dp"
                android:layout_height="36dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_back"
                    app:tint="?colorOnSurface"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp">

                <ImageView
                    android:id="@+id/il1"
                    android:layout_width="300dp"
                    android:layout_height="240dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="-19dp"
                    android:visibility="gone"/>

                <ImageView
                    android:id="@+id/il2"
                    android:layout_width="300dp"
                    android:layout_height="222dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:visibility="visible"
                    android:src="@drawable/il_edit_user_info_green"/>

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/bg_welcome_text"
                    android:gravity="center"
                    android:layout_marginTop="-20dp"
                    android:orientation="vertical"
                    android:padding="24dp">

                    <TextView
                        android:id="@+id/userInfoTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/userInfoText"
                        android:textAlignment="center"
                        android:lineSpacingExtra="8dp"
                        android:textColor="?colorOnSurface"
                        android:textAppearance="@style/userInfo" />

                    <EditText
                        android:id="@+id/nameEt"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/bg_edit_text_user_info"
                        android:hint="@string/nameHint"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:imeOptions="actionNext"
                        android:textColorHint="?colorOnSurface"
                        android:textSize="14sp"
                        android:textAlignment="viewStart"
                        android:textColor="?colorOnSurface"/>

                    <EditText
                        android:id="@+id/familyEt"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/bg_edit_text_user_info"
                        android:hint="@string/familyHint"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:textColorHint="?colorOnSurface"
                        android:textSize="14sp"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:textAlignment="viewStart"
                        android:textColor="?colorOnSurface" />

                    <EditText
                        android:id="@+id/expertiseEt"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:maxLines="1"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/bg_edit_text_user_info"
                        android:hint="@string/expertiseHint"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:textColorHint="?colorOnSurface"
                        android:textSize="14sp"
                        android:singleLine="true"
                        android:textColor="?colorOnSurface"
                        android:textAlignment="viewStart"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/submitBtn"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:layout_gravity="center_horizontal|bottom"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="28dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/bg_buttons"
                        android:text="@string/save"
                        android:stateListAnimator="@null"
                        android:textColor="?colorOnSurface" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>