<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dark2light"
    tools:context="com.example.taskwise.Event.EventDetailActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <RelativeLayout
                    android:id="@+id/backBtn"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_centerVertical="true">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_back"
                        app:tint="?colorOnSurface" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/headerTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/createNewEvent"
                    android:textColor="?colorOnSurface"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:id="@+id/deleteTaskBtn"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/bg_header_buttons"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_delete"
                        app:tint="?colorOnSurface" />

                </RelativeLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?colorOnSurface"
                    android:text="@string/title"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp">

                    <EditText
                        android:id="@+id/taskTitleEt"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:background="@null"
                        android:textColor="?colorOnSurface"
                        android:imeOptions="actionNext"
                        android:hint="@string/titleHint"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:textColorHint="@color/gray"
                        android:textSize="19sp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/white"/>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="28dp"
                android:paddingEnd="28dp"
                android:orientation="vertical"
                android:paddingTop="24dp"
                android:paddingBottom="20dp"
                android:background="@drawable/bg_white2white"
                android:layout_marginTop="8dp"
                android:elevation="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/middleGray"
                    android:text="@string/Date"
                    android:textSize="16sp"/>

                <LinearLayout
                    android:id="@+id/dateLay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="40dp">

                    <TextView
                        android:id="@+id/dateTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00FEFEFE"
                        android:hint="23 Jan, 2023"
                        android:textColor="?colorPrimary"
                        android:textColorHint="?colorPrimary"
                        android:maxLines="1"
                        android:layout_marginBottom="20dp"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:textSize="19sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/middleGray"
                        android:layout_below="@+id/descriptionEdt"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/timeLay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@+id/dateLay"
                    android:layout_marginTop="44dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/startTime"
                            android:textColor="@color/middleGray"
                            android:textSize="16sp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="12:00 PM"
                            android:textColor="?colorPrimary"
                            android:textSize="19sp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="16dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/endTime"
                            android:textColor="@color/middleGray"
                            android:textSize="16sp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="02:00 PM"
                            android:textColor="?colorPrimary"
                            android:textSize="19sp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="16dp"/>

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:id="@+id/vi"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/middleGray"
                    android:layout_below="@+id/timeLay"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:id="@+id/timePeriodTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/middleGray"
                    android:text="@string/timePeriod"
                    android:layout_marginTop="44dp"
                    android:textSize="14sp"/>

                <LinearLayout
                    android:id="@+id/timePeriodLay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_below="@id/timePeriodTv"
                    android:layout_marginStart="8dp">

                    <Spinner
                        android:id="@+id/timePeriodSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="56dp"
                        android:spinnerMode="dropdown"
                        android:backgroundTint="?colorAccent"
                        android:contextClickable="true"
                        android:textSize="19sp"
                        android:layout_marginStart="-4dp"
                        style="@style/SpinnerTheme"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/middleGray"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitTaskBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_buttons"
        android:text="@string/createTask"
        android:layout_margin="16dp"
        android:textColor="?colorOnSurface"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>